# bc-forge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  scratch_test.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  contract_improvement.yml  feature_request.yml
.github/workflows/: ci.yml
contracts/admin/: Cargo.toml
contracts/admin/src/: lib.rs
contracts/lifecycle/: Cargo.toml
contracts/lifecycle/src/: lib.rs
contracts/token/: Cargo.toml
contracts/token/src/: events.rs  lib.rs  test.rs
react/src/: hooks.ts
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/src/: client.ts  index.ts  utils.ts
