[package]
name = "esimorph-lifecycle"
version = "0.1.0"
edition = "2021"
publish = false
description = "Pause/unpause lifecycle management for esimorph contracts"

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
