[package]
name = "esimorph-token"
version = "0.1.0"
edition = "2021"
publish = false
description = "Core SEP-41 token contract for esimorph with admin controls and pausable lifecycle"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0.0"
esimorph-admin = { path = "../admin" }
esimorph-lifecycle = { path = "../lifecycle" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
